config/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: agents-datum-net
    app.kubernetes.io/name: agents-datum-net
  name: agents-datum-net
spec:
  internalTrafficPolicy: Cluster
  ports:
    - name: http
      port: 3000
      protocol: TCP
      targetPort: http
  selector:
    app.kubernetes.io/component: frontend
    app.kubernetes.io/instance: agents-datum-net
    app.kubernetes.io/name: agents-datum-net
  sessionAffinity: None
  type: ClusterIP
