config/base/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: agents-datum-net
spec:
  parentRefs:
    - name: external
      namespace: gateway-system
  hostnames:
    - agents.datum.net
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: agents-datum-net
          kind: Service
          group: ''
          port: 3000
